# vectorrag

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
api/: __init__.py  app.py  lambda_handler.py
infra/pipeline/: buildspec.yml
infra/terraform/: example.tfvars  iam.tf  main.tf  outputs.tf  variables.tf  versions.tf
scripts/: fetch_10q.py
src/vectorrag/: __init__.py  aws_bootstrap.py  cli.py  clients.py  config.py  embeddings.py  llm.py  logging_config.py  memory.py  prompts.py  rag.py  retriever.py  security.py  tokens.py  vectorstore.py
src/vectorrag/ingest/: __init__.py  chunker.py  loader.py  pipeline.py
tests/: test_chunker.py  test_memory.py  test_rag.py  test_security.py  test_tokens.py
